[gd_scene load_steps=7 format=3 uid="uid://bslrablfigo3k"]

[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://resources/theme/kenneyUI.tres" id="1_7katy"]
[ext_resource type="Script" path="res://ui/title.gd" id="2_nctxo"]

[sub_resource type="LabelSettings" id="LabelSettings_so6fc"]
font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogbgw"]
bg_color = Color(0.817078, 0.812444, 0.808478, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdren"]
bg_color = Color(0.122252, 0.122252, 0.122252, 1)
corner_detail = 19

[sub_resource type="LabelSettings" id="LabelSettings_mtvhe"]
font_color = Color(0, 0, 0, 1)

[node name="main_menu" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -52.5
offset_right = 25.0
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7katy")
script = ExtResource("2_nctxo")

[node name="title" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="title"]
layout_mode = 2
offset_left = -320.0
offset_top = -230.0
offset_right = 320.0
offset_bottom = 230.0

[node name="ColorRect" type="ColorRect" parent="title/PanelContainer2"]
layout_mode = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="MarginContainer" type="MarginContainer" parent="title/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 460
theme_override_constants/margin_right = 640

[node name="MarginContainer" type="MarginContainer" parent="title"]
layout_mode = 2
offset_left = -283.0
offset_top = -136.0
offset_right = 283.0
offset_bottom = 136.0
theme_override_constants/margin_bottom = 215

[node name="Title" type="Label" parent="title/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "GODOT WORKSHOP"
label_settings = SubResource("LabelSettings_so6fc")

[node name="MarginContainer2" type="MarginContainer" parent="title"]
layout_mode = 2
offset_left = -99.0
offset_top = -117.0
offset_right = 98.0
offset_bottom = 116.0
theme_override_constants/margin_top = 85

[node name="PanelContainer" type="PanelContainer" parent="title/MarginContainer2"]
layout_mode = 2
theme = ExtResource("1_7katy")

[node name="Panel" type="Panel" parent="title/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ogbgw")

[node name="MarginContainer2" type="MarginContainer" parent="title/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="title/MarginContainer2/PanelContainer/MarginContainer2"]
layout_mode = 2

[node name="Start" type="Button" parent="title/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7katy")
text = "Start!"

[node name="Quit" type="Button" parent="title/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="level_select" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="level_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="level_select/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 305
theme_override_constants/margin_top = 325

[node name="Panel" type="Panel" parent="level_select/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fdren")

[node name="MarginContainer" type="MarginContainer" parent="level_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -20.0
offset_right = 75.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 195

[node name="PanelContainer" type="PanelContainer" parent="level_select/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="level_select/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="level_select/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 40

[node name="CenterContainer" type="CenterContainer" parent="level_select/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="level_select/MarginContainer/PanelContainer/CenterContainer"]
layout_mode = 2
text = "Level Select"
label_settings = SubResource("LabelSettings_mtvhe")

[node name="MarginContainer2" type="MarginContainer" parent="level_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -44.0
offset_right = 56.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="CenterContainer" type="CenterContainer" parent="level_select/MarginContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="level_select/MarginContainer2/CenterContainer"]
layout_mode = 2
columns = 3

[node name="Level 1" type="Button" parent="level_select/MarginContainer2/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "1"

[node name="Level 2" type="Button" parent="level_select/MarginContainer2/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "2"

[node name="Level 3" type="Button" parent="level_select/MarginContainer2/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "3"

[node name="Level 4" type="Button" parent="level_select/MarginContainer2/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "4"

[node name="Level 5" type="Button" parent="level_select/MarginContainer2/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "5"

[node name="Level 6" type="Button" parent="level_select/MarginContainer2/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "6"

[node name="MarginContainer3" type="MarginContainer" parent="level_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.6621
offset_top = -21.1255
offset_right = 37.6621
offset_bottom = 21.1255
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 215

[node name="Button" type="Button" parent="level_select/MarginContainer3"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="title/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="title/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="level_select/MarginContainer2/CenterContainer/GridContainer/Level 1" to="." method="_on_level_button_pressed" binds= [1]]
[connection signal="pressed" from="level_select/MarginContainer2/CenterContainer/GridContainer/Level 2" to="." method="_on_level_button_pressed" binds= [2]]
[connection signal="pressed" from="level_select/MarginContainer2/CenterContainer/GridContainer/Level 3" to="." method="_on_level_button_pressed" binds= [3]]
[connection signal="pressed" from="level_select/MarginContainer2/CenterContainer/GridContainer/Level 4" to="." method="_on_level_button_pressed" binds= [4]]
[connection signal="pressed" from="level_select/MarginContainer2/CenterContainer/GridContainer/Level 5" to="." method="_on_level_button_pressed" binds= [5]]
[connection signal="pressed" from="level_select/MarginContainer2/CenterContainer/GridContainer/Level 6" to="." method="_on_level_button_pressed" binds= [6]]
[connection signal="pressed" from="level_select/MarginContainer3/Button" to="." method="_on_back_button_pressed"]
